# Skillbox_Project

./: CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  README.md  SearchServer.h  answers.json  answers_test.json  config.json  film.json  main.cpp  requests.json  todo.txt
GTests/: CMakeLists.txt  CMakeLists_old_2_work.txt  test.cpp
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
